package main;

message MembershipMetadata {
	// The time at which the membership request was filed, as a
	// timestamp in seconds since January 1, 1970, 00:00:00 UTC.
	optional uint64 request_timestamp = 1;

	// The IP the membership request was filed from.
	optional string request_source_ip = 2;

	// The exact contents of the response mail the email
	// address was verified with.
	optional string verification_email = 3;

	// The time at which the membership request was approved, as a
	// timestamp in seconds since January 1, 1970, 00:00:00 UTC.
	optional uint64 approval_timestamp = 4;

	// Who approved the request? (User name)
	optional string approver_uid = 5;

	// Comment which the applicant might have left.
	optional string comment = 6;
}

message Member {
	// Membership ID number (if assigned).
	optional uint64 id = 1;

        // The name of the member (first and last name or whatever the
        // appropriate format is).
        required string name = 2;

	// Street and house number or another appropriate format.
	required string street = 3;

	// City the person lives in.
	required string city = 4;

	// Zip code, if applicable.
	optional string zipcode = 5;

	// ISO two-letter country ID.
	required string country = 6;

	// email address the member can be reached under. Must be
	// verified.
	optional string email = 7;
	optional bool email_verified = 8;

	// A phone number the member can be reached under.
	optional string phone = 9;

	// The membership fee we agreed on for the member.
	required uint64 fee = 10;

	// User name and password hash the user desires.
	optional string username = 11;
	optional string pwhash = 12;
}

message MembershipAgreement {
	// PDF containing the membership request and a signature.
	optional bytes agreement_pdf = 1;

	// Parsed information from the PDF.
	optional Member member_data = 2;

	// Metadata about the membership submission.
	optional MembershipMetadata metadata = 3;
}
